--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@
 body {
   font-family: "Inter", sans-serif;
   margin-top: 60px;
+  background-color: var(--bgc);
 }
 
 h1 {
@@ -304,10 +305,10 @@ hr {
 /*===============================================================================================
                         MAIN
 ================================================================================================*/
-
+/* 
 main {
   background-color: rgb(17, 192, 134);
-}
+} */
 
 .avatar {
   width: 300px;
